<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/textHabitTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:gravity="center"
        android:padding="12dp"
        android:background="@drawable/note_title"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/textTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note_time"
        android:textSize="16sp"
        android:textColor="#00A3FF"
        android:layout_marginBottom="12dp"
        android:layout_gravity="start" />

    <EditText
        android:id="@+id/editNoteContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/note_content"
        android:inputType="textMultiLine"
        android:autofillHints="text"
        android:textSize="16sp"
        android:padding="12dp"
        android:textColor="#000000"
        android:gravity="top"
        android:backgroundTint="#ADD8FF"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_edittext_note" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="16dp">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textSize="16sp"
            android:background="@drawable/button_bg"
            android:textColor="#FFFFFF"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            android:textSize="16sp"
            android:background="@drawable/button_bg"
            android:textColor="#FFFFFF"
            android:layout_marginStart="8dp" />
    </LinearLayout>
</LinearLayout>
