<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profileScreen"
    tools:context=".activities.ProfileActivity">

    <data>
        <variable
            name="user"
            type="com.thtung.habit_app.model.User" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone" /> <!-- Ban đầu ẩn đi -->

        <LinearLayout
            android:id="@+id/profileScreen_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:id="@+id/avatar_section_profile"
                android:background="@color/white">


                <ImageView
                    android:id="@+id/image_banner"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:scaleType="fitXY"/>

                <FrameLayout
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:paddingTop="10dp"
                    android:paddingLeft="10dp"
                    android:id="@+id/back_button_profile_main">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/back_button"/>
                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="bottom"
                    android:paddingLeft="10dp">

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <FrameLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <com.google.android.material.imageview.ShapeableImageView
                                android:id="@+id/avatar_image"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:shadowColor="@color/black"
                                android:shadowDx="2"
                                android:shadowDy="2"
                                android:shadowRadius="1"
                                android:scaleType="centerCrop"/>

                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:scaleType="fitCenter"
                                android:src="@drawable/inner_stroke" />
                        </FrameLayout>

                        <ImageView
                            android:id="@+id/button_upload_profile_image"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="bottom|end"
                            android:src="@drawable/camera_svg"/>
    

                    </FrameLayout>

                    <TextView
                        android:id="@+id/username_display"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:text='@{user.name}'
                        android:textSize="30dp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:scaleType="center"
                        android:layout_marginLeft="20dp"
                        android:maxLines="1"
                        android:ellipsize="end"/>

                </LinearLayout>
            </RelativeLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/layout_profile"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/user_information"
                            android:textColor="#7C3E21"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                        <Space
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <TextView
                            android:id="@+id/link_revise_personal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableEnd="@drawable/icon_arrow_left"
                            android:drawablePadding="5dp"
                            android:text="@string/user_information_modification"
                            android:textColor="#506DFF"
                            android:textSize="15dp"
                            android:textStyle="bold|italic" />


                    </LinearLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="15dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/name_display"
                                android:textColor="@color/black"
                                android:textSize="18dp" />

                            <Space
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1" />

                            <TextView
                                android:id="@id/username_display"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="User"
                                android:textColor="#4E4E4E"
                                android:textSize="15dp"
                                android:textStyle="italic" />
                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_gravity="bottom"
                            android:background="@color/black" />
                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="15dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/dob_display"
                                android:textColor="@color/black"
                                android:textSize="18dp" />

                            <Space
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1" />

                            <TextView
                                android:id="@+id/dob_display"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="01/01/2000"
                                android:textColor="#4E4E4E"
                                android:textSize="15dp"
                                android:textStyle="italic" />
                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_gravity="bottom"
                            android:background="@color/black" />
                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="15dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/email_display"
                                android:textColor="@color/black"
                                android:textSize="18dp" />

                            <Space
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1" />

                            <TextView
                                android:id="@+id/email_display"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="aaa"
                                android:textColor="#4E4E4E"
                                android:textSize="15dp"
                                android:textStyle="italic" />
                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_gravity="bottom"
                            android:background="@color/black" />
                    </FrameLayout>
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="16dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/security_and_private"
                            android:textColor="#7C3E21"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                        <Space
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                    </LinearLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:id="@+id/change_password_layout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="15dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/password_display"
                                android:textColor="@color/black"
                                android:textSize="18dp" />

                            <Space
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:drawableEnd="@drawable/icon_expand_left"
                                android:text=""
                                android:textSize="18dp" />
                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_gravity="bottom"
                            android:background="@color/black" />
                    </FrameLayout>
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="16dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/account_management"
                            android:textColor="#7C3E21"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                        <Space
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                    </LinearLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="15dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/delete_account"
                                android:textColor="@color/black"
                                android:textSize="18dp" />

                            <Space
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1" />

                            <Button
                                android:id="@+id/delete_account_button"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:backgroundTint="#FF0000"
                                android:text="@string/delete_button"
                                android:textColor="@color/white"
                                android:textSize="20dp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_gravity="bottom"
                            android:background="@color/black" />
                    </FrameLayout>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>